# Automation

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  config.yaml.example  main.py  pyproject.toml
modules/: __init__.py  confluence.py  csv_utils.py  excel.py  jira.py  logger.py  slack.py  utils.py
tests/: test_confluence.py  test_csv_utils.py  test_excel.py  test_jira.py  test_slack.py  test_utils.py
