[project]
name = "automation"
version = "0.1.0"
description = "Automation scripts and tools"
requires-python = "==3.11.*"
dependencies = [
    "ruff>=0.15.10",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
